--- a/modules/static/int_payments.html
+++ b/modules/static/int_payments.html
@@ -7,6 +7,7 @@
 <h1><strong>Оплата</strong></h1>
 
 <ol>
+	<li>Оплата банковской картой онлайн.</li>
 	<li>Оплата курьеру при получении банковской картой или наличными.</li>
 	<li>Оплата при получении в пункте самовывоза банковской картой или наличными.</li>
 	<li>Оплата по безналичному расчету по выставленному счету.</li>
